--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,9 @@
         <input type="number" value="1" style="width:35px">
         second
       </div>
+      <div class="">
+        Fetching among a total of {{numberOfArtworks}} artworks.
+      </div>
     </div>
     <script src="static/jquery/jquery.min.js" charset="utf-8"></script>
     <script type="text/javascript">
