--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
       </div>
       <div class="row">
         Change every
-        <input type="number" value="1" style="width:35px">
+        <input type="number" value="10" style="width:35px" id="timeoutInterval">
         second
       </div>
       <div class="">
@@ -35,6 +35,7 @@
       var $img = null;
       var $name = null;
       var $author = null;
+      var $timeoutInterval = null;
       var previousId = null;
       var nextId = null;
       var timeoutId = null;
@@ -48,10 +49,15 @@
           setArtwork(artwork);
         });
         clearTimeout(timeoutId);
+        timeoutInterval = parseInt($timeoutInterval.val());
+        if(timeoutInterval <= 0){
+          timeoutInterval = 10;
+        }
+        console.log('next() using timeoutInterval='+timeoutInterval);
         timeoutId = setTimeout(function(){
           console.log('setTimeout() called');
           next();
-        }, 10*1000);
+        }, timeoutInterval*1000);
       }
       function setArtwork(a) {
         $img.attr('src', a.url);
@@ -62,6 +68,7 @@
         $img = $('#img');
         $name = $('#name');
         $author = $('#author');
+        $timeoutInterval = $('#timeoutInterval');
         next();
       });
     </script>
