--- a/museum/templates/artworks/index.html
+++ b/museum/templates/artworks/index.html
@@ -1,9 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Musée salon</title>
-    <link rel="stylesheet" href="static/bootstrap3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'museum/bootstrap3/css/bootstrap.min.css' %}">
   </head>
   <body>
     <div class=" text-center">
@@ -30,7 +31,10 @@
         Fetching among a total of {{numberOfArtworks}} artworks.
       </div>
     </div>
-    <script src="static/jquery/jquery.min.js" charset="utf-8"></script>
-    <script src="static/index.js" charset="utf-8"></script>
+    <script src="{% static 'museum/jquery/jquery.min.js' %}" charset="utf-8"></script>
+    <script type="text/javascript">
+      var urlNext = '{% url 'next' %}';
+    </script>
+    <script src="{% static 'museum/index.js' %}" charset="utf-8"></script>
   </body>
 </html>
