+ title and author contains &nbsp; to prevent empty value to break design

--- a/museum/templates/index.html
+++ b/museum/templates/index.html
@@ -14,8 +14,8 @@
           <img class="" src="" alt="" id="img" style="height:80vh;">
         </div>
         <div class="">
-          <h1 id="name"></h1>
-          <h2 id="author"></h2>
+          <h1><span id="name"></span>&nbsp;</h1>
+          <h2><span id="author"></span>&nbsp;</h2>
         </div>
         <div class="">
           <button onclick="previous()" class="btn btn-light btn-sm"><<</button>
