+ 80vh is also on parent div to prevent breaking layout

--- a/museum/templates/index.html
+++ b/museum/templates/index.html
@@ -10,7 +10,7 @@
   <body class="container-fluid">
     <main class="row text-center text-light" style="background:black">
       <div class="col">
-        <div class="">
+        <div class="" style="height:80vh;">
           <img class="" src="" alt="" id="img" style="height:80vh;">
         </div>
         <div class="">
