+ botstrap design of input tiemout

--- a/museum/templates/index.html
+++ b/museum/templates/index.html
@@ -23,9 +23,9 @@
           <button onclick="play()" id="play" class="btn btn-light btn-sm">play</button>
           <button onclick="next()" class="btn btn-light btn-sm">>></button>
         </div>
-        <div class="">
+        <div class="my-2">
           Change every
-          <input type="number" value="10" style="width:35px" id="timeoutInterval">
+          <input type="number" class="p-0 px-1 d-inline-block form-control form-control-sm" value="10" style="width:55px" id="timeoutInterval">
           second
         </div>
         <div class="mb-4">
