+ possibility to reset all timesPlayed to 0

--- a/museum/templates/index.html
+++ b/museum/templates/index.html
@@ -42,6 +42,9 @@
         <div class="">
           Visit <a href="{% url 'admin:index' %}">admin</a>
         </div>
+        <div class="m-1">
+          <a href="{% url 'reset' %}">Reset<a/> times played to 0
+        </div>
       </div>
     </footer>
 
