--- a/museum/templates/museum/index.html
+++ b/museum/templates/museum/index.html
@@ -5,37 +5,54 @@
     <meta charset="utf-8">
     <title>Musée salon</title>
     <link rel="shortcut icon" href="{% static 'favicon.ico' %}">
+    <link rel="stylesheet" href="{% static 'w3css-4/w3pro.min.css' %}">
     <link rel="stylesheet" href="{% static 'bootstrap-4.0.0/css/bootstrap.min.css' %}">
     <style media="screen">
+    body {
+      background: black;
+    }
     #img {
-      height:80vh;
+      height:100vh;
       background-size:contain;
       background-repeat: no-repeat;
       background-position: center;
     }
+    h1 { font-size: 1rem; }
+    h2 { font-size: .8rem; }
     </style>
   </head>
   <body class="container-fluid">
-    <main class="row text-center text-light" style="background:black">
+    <main class="row text-center text-light">
       <div class="col">
-        <div id="img"></div>
-        <div class="">
-          <h1><span id="name"></span>&nbsp;</h1>
-          <h2><span id="author"></span>&nbsp;</h2>
+        <div class="row">
+          <div class="col-lg-2">
+
+          </div>
+          <div class="col-lg-8">
+            <div id="img"></div>
+          </div>
+          <div class="col-lg-2 w3-display-container">
+            <div class="w3-display-middle" style="width:100%">
+              <h1><span id="name"></span>&nbsp;</h1>
+              <h2><span id="author"></span>&nbsp;</h2>
+            </div>
+          </div>
         </div>
-        <div class="">
-          <button onclick="previous()" class="btn btn-light btn-sm"><<</button>
-          <button onclick="pause()" id="pause" class="btn btn-light btn-sm">pause</button>
-          <button onclick="play()" id="play" class="btn btn-light btn-sm">play</button>
-          <button onclick="next()" class="btn btn-light btn-sm">>></button>
-        </div>
-        <div class="my-2">
-          Change every
-          <input type="number" class="p-0 px-1 d-inline-block form-control form-control-sm" value="10" style="width:55px" id="timeoutInterval">
-          second
-        </div>
-        <div class="mb-4">
-          Fetching among a total of {{numberOfArtworks}} artworks.
+        <div class="row m-4">
+          <div class="col-12">
+            <button onclick="previous()" class="btn btn-light btn-sm"><<</button>
+            <button onclick="pause()" id="pause" class="btn btn-light btn-sm">pause</button>
+            <button onclick="play()" id="play" class="btn btn-light btn-sm">play</button>
+            <button onclick="next()" class="btn btn-light btn-sm">>></button>
+          </div>
+          <div class="col-12 my-2">
+            Change every
+            <input type="number" class="p-0 px-1 d-inline-block form-control form-control-sm" value="10" style="width:55px" id="timeoutInterval">
+            second
+          </div>
+          <div class="col-12">
+            Fetching among a total of {{numberOfArtworks}} artworks.
+          </div>
         </div>
       </div>
     </main>
