--- a/museum/templates/museum/admin/rmngp.html
+++ b/museum/templates/museum/admin/rmngp.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block content %}
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap-grid.min.css">
+<link rel="stylesheet" href="{% static 'bootstrap-4.0.0/css/bootstrap.min.css' %}">
 
 <div id="app" class="row">
   <div class="col-md-3">
