--- a/museum/templates/museum/index.html
+++ b/museum/templates/museum/index.html
@@ -73,7 +73,7 @@
       </div>
     </footer>
 
-    <script src="{% static 'jquery-3.2.1/jquery.min.js' %}" charset="utf-8"></script>
+    <script src="{% static 'admin/js/vendor/jquery/jquery.min.js' %}" charset="utf-8"></script> <!-- 3.3.1 -->
     <script type="text/javascript">
       var urlNext = '{% url 'next' %}';
     </script>
