+ /reset a in admin header

--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -5,7 +5,8 @@
   <div class="breadcrumbs">
     <a href="{% url 'admin:index' %}">Home</a> -
     <a href="{% url 'admin:museum_artwork_changelist' %}">Museum & artworks</a> -
-    <a href="{% url 'admin:museum_artwork_changelist' %}rmngp">Add artwork from RMNGP</a>
+    <a href="{% url 'admin:museum_artwork_changelist' %}rmngp">Add artwork from RMNGP</a> -
+    <a href="{% url 'reset' %}">Reset times played to 0<a/>
   </div>
 {% endif %}
 {{block.super}}
