+ bootstrap on every admin page (base.html)

--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -1,5 +1,16 @@
 {% extends "admin/base.html" %}
 
+{% load static %}
+
+{% block extrastyle %}{{ block.super }}
+<link rel="stylesheet" href="{% static 'bootstrap-4.0.0/css/bootstrap.min.css' %}">
+<style media="screen">
+  html>body div#header {height: initial;}
+  html>body .submit-row a.deletelink {height: initial;}
+  html>body table>caption {caption-side: top}
+</style>
+{% endblock %}
+
 {% block messages %}
 {% if has_permission %}
   <div class="breadcrumbs">
