--- a/museum/templates/museum/index.html
+++ b/museum/templates/museum/index.html
@@ -78,6 +78,7 @@
       </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.min.js"></script> <!-- ES6 polyfill for Promises used by axios -->
     <script src="https://cdn.jsdelivr.net/npm/axios@0.18.0/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.22/dist/vue.min.js"></script>
     <script type="text/javascript">
